# cleanmac

./: .gitignore  DEVELOPMENT.md  GEMINI.md  LICENSE  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vitest.config.ts
.github/workflows/: ci.yml
.zenflow/tasks/init-d417/: plan.md  requirements.md  spec.md
src/: App.test.tsx  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/cleaner/: history.rs  mod.rs  safe_delete.rs
src-tauri/src/commands/: clean.rs  config.rs  mod.rs  scan.rs  system.rs
src-tauri/src/models/: config.rs  file_entry.rs  history.rs  mod.rs  scan_result.rs
src-tauri/src/scanner/: cache_scanner.rs  mod.rs
src-tauri/src/utils/: format.rs  fs.rs  hash.rs  mod.rs  permissions.rs
src/lib/: constants.test.ts  constants.ts  format.test.ts  format.ts
src/stores/: scanStore.ts
src/styles/: globals.css
src/test/: scanStore.test.ts  setup.ts
src/types/: index.ts
