[package]
name = "cleanmac"
version = "0.1.0"
description = "A macOS disk cleanup and optimization utility"
authors = ["CleanMac Team"]
edition = "2021"
rust-version = "1.75"

[lib]
name = "cleanmac_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri framework
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# File system operations
walkdir = "2"              # Directory traversal
dirs = "5"                 # Standard directories
glob = "0.3"               # Pattern matching

# Hashing for duplicates
sha2 = "0.10"

# Parallel processing
rayon = "1"

# macOS-specific
plist = "1"                # Read .plist files
trash = "5"                # Move to Trash safely

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Logging
log = "0.4"
env_logger = "0.11"

# Error handling
thiserror = "2"
anyhow = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
